<resources>
    <string name="app_name">Assessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addition_sign">+</string>
    <string name="answer">Answer :</string>
    <string name="answer_hint">Answer</string>
    <string name="submit">Submit</string>
    <string name="error_message">Incorrect answer. Please try again.</string>
    <string name="enter_text">Enter Text : </string>
    <string name="text_hint">Text</string>
    <string name="error_message_palendrome">The word is not a palendrome. Please try again.</string>
    <string name="enter_first_text">Enter First Text : </string>
    <string name="enter_second_text">Enter Second Text : </string>
    <string name="error_message_anagram">The word is not a anagram. Please try again.</string>
    <string name="title_activity_successful">SuccessfulActivity</string>
    <string name="success">Congratulations you have passed. Would you like to try again?</string>
    <string name="try_again">Try again</string>
</resources>
