<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chyllson.assessment.RandomNumberFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout_fomula"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_firstRandomNumber"
                android:textSize="20dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition_sign"
                android:id="@+id/textView_addition"
                android:textSize="20dp"
                android:layout_toRightOf="@+id/textView_firstRandomNumber"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_secondRandomNumber"
                android:layout_toRightOf="@+id/textView_addition"
                android:textSize="20dp"
                android:padding="5dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout_answer"
            android:layout_below="@+id/relativeLayout_fomula"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"
                android:id="@+id/textView_answer"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_centerVertical="true" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText_answer"
                android:inputType="number"
                android:hint="@string/answer_hint"
                android:layout_toRightOf="@+id/textView_answer" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_answer"
            android:id="@+id/relativeLayout_submit"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/button_submit"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_message"
                android:id="@+id/textView_errorMessage"
                android:layout_below="@+id/button_submit"
                android:layout_centerHorizontal="true"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>
