<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chyllson.assessment.PalendromeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#ffffff">>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout_answer"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_text"
                android:id="@+id/textView_enterTextPalendrome"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_centerVertical="true" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText_textPalendrome"
                android:inputType="text"
                android:hint="@string/text_hint"
                android:layout_toRightOf="@+id/textView_enterTextPalendrome" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout_answer"
            android:id="@+id/relativeLayout_submit"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/button_submitPalendrome"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>
